QSharedPointer: do allow calling deleters on null pointers

I don't know why std::shared_ptr allows this, but why not.

[ChangeLog][Important Behavior Changes] QSharedPointer objects will now
call custom deleters even when the pointer being tracked was null. This
behavior is the same as std::shared_ptr.

Fixes: QTBUG-85285
Change-Id: I24006db8360041f598c5fffd161c260df0313b55
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>
(cherry picked from commit 95afe6b244dbd9623a92399d1bed0b9f52aa1e65)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>